Remove font-weight rule for page-links to fix bug when viewed on Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,7 +119,6 @@ a.ic::after {
     position: relative;
     display: block;
     font-size: 2em;
-    font-weight: 800;
     overflow: hidden;
     background: linear-gradient(to right, #C97064, #C97064 50%, rgba(0, 120, 66, 1) 50%);
     background-clip: text;
